--- a/gallerycss.css
+++ b/gallerycss.css
@@ -166,3 +166,12 @@ margin-right: 15%;
     margin-left: 10%;
     margin-bottom: 5%;
 }
+.to-home
+ {
+    color: #D35A0E; 
+    margin: 1px;
+    font-family: 'Oswald', sans-serif;
+    font-size:25px;
+    text-decoration: none;
+    text-align: center;
+}
